Fix task list misalignment

--- a/src/components/tiptap-node/list-node/list-node.scss
+++ b/src/components/tiptap-node/list-node/list-node.scss
@@ -149,7 +149,6 @@
 
       label {
         position: relative;
-        padding-top: 0.375rem;
         padding-right: 0.5rem;
 
         input[type="checkbox"] {
